fixed the alignement issue

--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -239,7 +239,7 @@
 		max-width: 100%;
 		width: 1400px;
 		color: #956BBF;
-		text-align: left;
+		
 		
 
 		@include breakpoint('wide') {
